--- a/app/index.html
+++ b/app/index.html
@@ -12,7 +12,7 @@
     <script>
         async function callAzureFunction() {
             try {
-                const response = await fetch('<Azure_Function_URL>');
+                const response = await fetch(`/api/message`);
                 const data = await response.json();
                 document.getElementById('result').innerText = data.body;
             } catch (error) {
