--- a/app/index.html
+++ b/app/index.html
@@ -12,9 +12,9 @@
     <script>
         async function callAzureFunction() {
             try {
-                const response = await fetch(`/api/message`);
+                const response = await fetch(`http://localhost:4280/api/message`);
                 const data = await response.json();
-                document.getElementById('result').innerText = data.body;
+                document.getElementById('result').innerText = data.text; // Change 'data.body' to 'data.text'
             } catch (error) {
                 console.error('Error calling Azure Function:', error);
             }
